--- a/GSIDebugWindow.xaml
+++ b/GSIDebugWindow.xaml
@@ -5,15 +5,20 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CSAuto"
         mc:Ignorable="d"
-        Title="CSAUto - Debug Window" Height="450" Width="800" x:Name="debugWind" Closed="debugWind_Closed">
+        Title="CSAuto - Debug Window" Height="450" Width="800" x:Name="debugWind" Closed="debugWind_Closed">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <TextBlock x:Name="lastRecieveTime" Text="Last recieve time from GSI" Grid.Row="0"/>
-        <TextBox x:Name="outputBox" Text="None" Grid.Row="1"/>
-        <TextBox x:Name="debugBox" Grid.Row="2"/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="250"/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <TextBlock x:Name="lastRecieveTime" Text="Last recieve time from GSI" Grid.Row="0" Grid.ColumnSpan="2"/>
+        <TextBlock x:Name="steamInfo" Text="SteamID3 : none LaunchOptions ''" Grid.Row="0" Grid.Column="1" HorizontalAlignment="Right" FontSize="12" TextWrapping="Wrap" Margin="0,0,10,0"/>
+        <TextBox x:Name="outputBox" IsReadOnly="True" Text="None" Grid.Row="1" Grid.ColumnSpan="2"/>
+        <TextBox x:Name="debugBox" IsReadOnly="True" Grid.Row="2" Grid.ColumnSpan="2"/>
     </Grid>
 </Window>
