--- a/GSIDebugWindow.xaml
+++ b/GSIDebugWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CSAuto"
         mc:Ignorable="d"
-        Title="CSAUto - Debug Window" Height="450" Width="800" x:Name="debugWind" Closed="debugWind_Closed">
+        Title="CSAuto - Debug Window" Height="450" Width="800" x:Name="debugWind" Closed="debugWind_Closed">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
