--- a/GSIDebugWindow.xaml
+++ b/GSIDebugWindow.xaml
@@ -13,7 +13,7 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
         <TextBlock x:Name="lastRecieveTime" Text="Last recieve time from GSI" Grid.Row="0"/>
-        <TextBox x:Name="outputBox" Text="None" Grid.Row="1"/>
-        <TextBox x:Name="debugBox" Grid.Row="2"/>
+        <TextBox x:Name="outputBox" IsReadOnly="True" Text="None" Grid.Row="1"/>
+        <TextBox x:Name="debugBox" IsReadOnly="True" Grid.Row="2"/>
     </Grid>
 </Window>
