--- a/GSIDebugWindow.xaml
+++ b/GSIDebugWindow.xaml
@@ -13,7 +13,11 @@
             <RowDefinition/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <DockPanel Grid.Row ="0">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="250"/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <DockPanel Grid.Row ="0" Grid.ColumnSpan="2">
             <Menu DockPanel.Dock="Top">
                 <MenuItem Header="_File">
                     <MenuItem x:Name="OpenFile" Header="_Open" Click="OpenFile_Click"/>
@@ -21,10 +25,9 @@
                 </MenuItem>
             </Menu>
         </DockPanel>
-        <TextBlock x:Name="lastRecieveTime" Text="Last recieve time from GSI" Grid.Row="1"/>
-        <TextBox x:Name="outputBox" IsReadOnly="True" Text="None" Grid.Row="2"/>
-        <TextBox x:Name="debugBox" IsReadOnly="True" Grid.Row="3"/>
         <TextBlock x:Name="lastRecieveTime" Text="Last recieve time from GSI" Grid.Row="1" Grid.ColumnSpan="2"/>
+        <TextBox x:Name="outputBox" IsReadOnly="True" Text="None" Grid.Row="2" Grid.ColumnSpan="2"/>
+        <TextBox x:Name="debugBox" IsReadOnly="True" Grid.Row="3" Grid.ColumnSpan="2"/>
         <TextBlock x:Name="steamInfo" Text="SteamID3 : none LaunchOptions ''" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Right" FontSize="12" TextWrapping="Wrap" Margin="0,0,10,0"/>
     </Grid>
 </Window>
