--- a/GSIDebugWindow.xaml
+++ b/GSIDebugWindow.xaml
@@ -22,7 +22,7 @@
             </Menu>
         </DockPanel>
         <TextBlock x:Name="lastRecieveTime" Text="Last recieve time from GSI" Grid.Row="1"/>
-        <TextBox x:Name="outputBox" IsReadOnly="True" Text="None" Grid.Row="2"/>
-        <TextBox x:Name="debugBox" IsReadOnly="True" Grid.Row="3"/>
+        <TextBox x:Name="outputBox" IsReadOnly="True" Text="None" Grid.Row="2" VerticalScrollBarVisibility="Auto"/>
+        <TextBox x:Name="debugBox" IsReadOnly="True" Grid.Row="3" VerticalScrollBarVisibility="Auto"/>
     </Grid>
 </Window>
