fixed tcp client and server related stuff

--- a/CSAuto_Mobile/Resources/layout/activity_main.xml
+++ b/CSAuto_Mobile/Resources/layout/activity_main.xml
@@ -19,7 +19,8 @@
         android:gravity="top|center"
         android:textColor="#ffb71c1c"
         android:text="output"
-        android:id="@+id/OutputText"/>
+        android:id="@+id/OutputText"
+        android:scrollbars="vertical"/>
      <Button
         android:id="@+id/start_timestamp_service_button"
         android:layout_width="match_parent"
