--- a/CSAuto/GUIWindow.xaml
+++ b/CSAuto/GUIWindow.xaml
@@ -25,6 +25,10 @@
                             <StackPanel Orientation="Vertical">
                                 <CheckBox x:Name="StartUpCheck" Content="menu_startup" Height="Auto" IsChecked="{Binding Source={x:Static properties:Settings.Default},Path=runAtStartUp}" Click="StartUpCheck_Click"/>
                                 <CheckBox x:Name="DarkThemeCheck" Content="menu_darktheme" Height="Auto" IsChecked="{Binding Source={x:Static properties:Settings.Default},Path=darkTheme}" Click="DarkThemeCheck_Click"/>
+                                <StackPanel Orientation="Horizontal">
+                                    <TextBlock Text="title_color" FontSize="15" TextAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                    <ComboBox x:Name="ColorsComboBox"/>
+                                </StackPanel>
                                 <CheckBox Content="menu_checkforupdates" Height="Auto" IsChecked="{Binding Source={x:Static properties:Settings.Default},Path=autoCheckForUpdates}"/>
                                 <TextBlock Text="menu_language" FontSize="20" FontWeight="Bold"/>
                                 <StackPanel x:Name="languagesStackPanel" Orientation="Vertical"/>
@@ -35,7 +39,10 @@
                                 <CheckBox Content="menu_mobileappenabled" Height="Auto" IsChecked="{Binding Source={x:Static properties:Settings.Default},Path=mobileAppEnabled}"/>
                                 <TextBlock Text="inputtitle_mobileip" FontSize="20" FontWeight="Bold"/>
                                 <TextBox Text="{Binding Source={x:Static properties:Settings.Default},Path=phoneIpAddress}"/>
-                                <TextBlock Text="inputtitle_telegramid" FontSize="20" FontWeight="Bold"/>
+                                <StackPanel Orientation="Horizontal">
+                                    <TextBlock Text="inputtitle_telegramid" FontSize="20" FontWeight="Bold" HorizontalAlignment="Left"/>
+                                    <Button Content="inputtext_botlinkbutton" Click="BotButton_Click" Margin="20,0,0,0"/>
+                                </StackPanel>
                                 <TextBox Text="{Binding Source={x:Static properties:Settings.Default},Path=telegramChatId}"/>
                                 <TextBlock Text="menu_notifications" FontSize="20" FontWeight="Bold"/>
                                 <CheckBox Content="menu_acceptednotification" Height="Auto" IsChecked="{Binding Source={x:Static properties:Settings.Default},Path=acceptedNotification}"/>
