--- a/CSAuto/GUIWindow.xaml
+++ b/CSAuto/GUIWindow.xaml
@@ -33,10 +33,10 @@
                             <StackPanel Orientation="Vertical">
                                 <CheckBox x:Name="StartUpCheck" Content="menu_startup" Height="Auto" IsChecked="{Binding Source={x:Static properties:Settings.Default},Path=runAtStartUp}" Click="StartUpCheck_Click"/>
                                 <CheckBox x:Name="DarkThemeCheck" Content="menu_darktheme" Height="Auto" IsChecked="{Binding Source={x:Static properties:Settings.Default},Path=darkTheme}" Click="DarkThemeCheck_Click"/>
-                                <!--<StackPanel Orientation="Horizontal">
+                                <StackPanel Orientation="Horizontal">
                                     <TextBlock Text="title_color" FontSize="15" TextAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                                    <ComboBox x:Name="ColorsComboBox" ItemsSource="{Binding Source={x:Static properties:Settings.Default},Path=availableColors}" SelectedItem="{Binding Source={x:Static properties:Settings.Default},Path=currentColor, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-                                </StackPanel>--> <!--ComboBox doesnt update-->
+                                    <ComboBox x:Name="ColorsComboBox" ItemsSource="{Binding Source={x:Static properties:Settings.Default},Path=availableColors}" SelectedItem="{Binding Source={x:Static properties:Settings.Default},Path=currentColor, Mode=OneTime, UpdateSourceTrigger=PropertyChanged}" SelectionChanged="ColorsComboBox_SelectionChanged"/>
+                                </StackPanel>
                                 <CheckBox Content="menu_checkforupdates" Height="Auto" IsChecked="{Binding Source={x:Static properties:Settings.Default},Path=autoCheckForUpdates}"/>
                                 <TextBlock Text="menu_language" FontSize="20" FontWeight="Bold"/>
                                 <StackPanel x:Name="languagesStackPanel" Orientation="Vertical"/>
