--- a/src/CSAuto/GUIWindow.xaml
+++ b/src/CSAuto/GUIWindow.xaml
@@ -157,6 +157,22 @@
                                 <TextBox x:Name="InGameStateText" Text="{Binding Source={x:Static properties:Settings.Default},Path=inGameState,Mode=OneTime}" TextChanged="InGameStateText_TextChanged"/>
                             </StackPanel>
                         </mahapps:MetroTabItem>
+                        <mahapps:MetroTabItem Header="menu_discordbuttons">
+                            <StackPanel Orientation="Vertical">
+                                <ListView x:Name="DiscordRPCButtonsListView">
+                                    <ListView.View>
+                                        <GridView>
+                                            <GridViewColumn x:Name="listViewLabel" Header="discord_label" DisplayMemberBinding="{Binding Label}"  />
+                                            <GridViewColumn x:Name="listViewUrl" Header="discord_url" DisplayMemberBinding="{Binding Url}" />
+                                        </GridView>
+                                    </ListView.View>
+                                </ListView>
+                                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                                    <Button x:Name="RemoveDiscordButton" Content="discord_removebutton" HorizontalAlignment="Left" Margin="0,0,5,0" Click="RemoveDiscordButton_Click"/>
+                                    <Button x:Name="AddDiscordButton" Content="discord_addbutton" HorizontalAlignment="Right" Margin="5,0,0,0" Click="AddDiscordButton_Click"/>
+                                </StackPanel>
+                            </StackPanel>
+                        </mahapps:MetroTabItem>
                     </TabControl>
                     <TextBlock Text="title_discordrpctemplates"/>
                     <StackPanel Orientation="Horizontal" Margin="0,10,0,10">
