added last captrued frame to guiwindow debug

--- a/src/CSAuto/GUIWindow.xaml
+++ b/src/CSAuto/GUIWindow.xaml
@@ -120,7 +120,7 @@
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="250"/>
                         <ColumnDefinition/>
-                        <ColumnDefinition/>
+                        <ColumnDefinition Width="Auto"/>
                     </Grid.ColumnDefinitions>
                     <DockPanel Grid.Row ="0" Grid.ColumnSpan="2">
                         <Menu DockPanel.Dock="Top">
@@ -134,7 +134,9 @@
                     <TextBox x:Name="outputBox" IsReadOnly="True" Text="None" Grid.Row="2" Grid.ColumnSpan="3" VerticalScrollBarVisibility="Auto"/>
                     <TextBox x:Name="debugBox" IsReadOnly="True" Grid.Row="3" Grid.ColumnSpan="3" VerticalScrollBarVisibility="Auto"/>
                     <!--<TextBlock Text="CS Console Output:" Grid.Row="1" Grid.Column="2" VerticalAlignment="Bottom"/> -->
-                    <TextBox x:Name="csConsoleOutput" IsReadOnly="True" Grid.Row="2" Grid.RowSpan="2" Grid.Column="2" VerticalScrollBarVisibility="Auto"/>
+                    <TextBlock Text="Latest Captured Frame:" Grid.Row="1" Grid.Column="2" VerticalAlignment="Bottom"/>
+                    <Image Grid.Row="2" Grid.RowSpan="1" Grid.Column="2" x:Name="latestCapturedFrame"/>
+                    <TextBox x:Name="csConsoleOutput" IsReadOnly="True" Grid.Row="2" Grid.RowSpan="2" Grid.Column="2" VerticalScrollBarVisibility="Auto" Visibility="Hidden"/>
                     <TextBlock x:Name="steamInfo" Text="SteamID3 : none LaunchOptions ''" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3" HorizontalAlignment="Left" FontSize="12" TextWrapping="Wrap" Margin="0,0,10,30"/>
                 </Grid>
             </mahapps:MetroTabItem>
