--- a/src/CSAuto/GUIWindow.xaml
+++ b/src/CSAuto/GUIWindow.xaml
@@ -37,7 +37,7 @@
                                     <TextBlock Text="title_color" FontSize="15" TextAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                                     <ComboBox x:Name="ColorsComboBox" ItemsSource="{Binding Source={x:Static properties:Settings.Default},Path=availableColors}" SelectedItem="{Binding Source={x:Static properties:Settings.Default},Path=currentColor, Mode=OneTime, UpdateSourceTrigger=PropertyChanged}" SelectionChanged="ColorsComboBox_SelectionChanged"/>
                                 </StackPanel>
-                                <CheckBox Content="menu_checkforupdates" Height="Auto" IsChecked="{Binding Source={x:Static properties:Settings.Default},Path=autoCheckForUpdates}"/>
+                                <CheckBox Content="menu_autocheckforupdates" Height="Auto" IsChecked="{Binding Source={x:Static properties:Settings.Default},Path=autoCheckForUpdates}"/>
                                 <TextBlock Text="menu_language" FontSize="20" FontWeight="Bold"/>
                                 <StackPanel x:Name="languagesStackPanel" Orientation="Vertical"/>
                             </StackPanel>
