--- a/src/CSAuto/GUIWindow.xaml
+++ b/src/CSAuto/GUIWindow.xaml
@@ -9,9 +9,11 @@
         Title="CSAuto" 
         Height="650"
         Width="800"
+        MinHeight="550" 
+        MinWidth="800"
         Closed="GUIWindow_Closed"
         Loaded="GUIWindow_Loaded"
-        WindowState="Maximized"
+        WindowState="Normal"
         WindowTitleBrush="Black"
         GlowBrush="Black"
         TitleCharacterCasing="Normal">
