--- a/src/CSAuto/GUIWindow.xaml
+++ b/src/CSAuto/GUIWindow.xaml
@@ -117,7 +117,11 @@
                                   VerticalAlignment="Stretch"
                                   HorizontalAlignment="Stretch"
                                   VerticalScrollBarVisibility="Auto"
-                                  Margin="5"/>
+                                  Margin="5">
+                    <FlowDocument>
+                        <Paragraph>Loading...</Paragraph>
+                    </FlowDocument>
+                </FlowDocumentScrollViewer>
             </mahapps:MetroTabItem>
             <mahapps:MetroTabItem Header="menu_debug">
                 <Grid>
