--- a/src/CSAuto/GUIWindow.xaml
+++ b/src/CSAuto/GUIWindow.xaml
@@ -120,7 +120,9 @@
                                   VerticalScrollBarVisibility="Auto"
                                   Margin="5">
                     <FlowDocument>
-                        <Paragraph>Loading...</Paragraph>
+                        <Paragraph>
+                            <Run Text="Loading..."/>
+                        </Paragraph>
                     </FlowDocument>
                 </FlowDocumentScrollViewer>
             </mahapps:MetroTabItem>
