--- a/src/CSAuto/GUIWindow.xaml
+++ b/src/CSAuto/GUIWindow.xaml
@@ -152,8 +152,8 @@
                     <TextBox x:Name="outputBox" IsReadOnly="True" Text="None" Grid.Row="2" Grid.ColumnSpan="3" VerticalScrollBarVisibility="Auto"/>
                     <TextBox x:Name="debugBox" IsReadOnly="True" Grid.Row="3" Grid.ColumnSpan="3" VerticalScrollBarVisibility="Auto"/>
                     <!--<TextBlock Text="CS Console Output:" Grid.Row="1" Grid.Column="2" VerticalAlignment="Bottom"/> -->
-                    <TextBlock Text="{Binding Source={x:Static csauto:DiscordRPCButtonSerializer.Path}}" Grid.Row="1" Grid.Column="0" VerticalAlignment="Bottom" Margin="0,0,0,15"/>
-                    <TextBlock Text="" x:Name="OldCaptureText" Grid.Row="1" Grid.Column="1" VerticalAlignment="Bottom" Margin="15,0,0,15"/>
+                    <TextBlock Text="{Binding Source={x:Static csauto:DiscordRPCButtonSerializer.Path}}" Grid.Row="1" Grid.Column="1" VerticalAlignment="Bottom" Margin="0,0,0,15" TextWrapping="WrapWithOverflow"/>
+                    <TextBlock Text="" x:Name="OldCaptureText" Grid.Row="1" Grid.Column="0" VerticalAlignment="Bottom" Margin="0,0,0,15"/>
                     <TextBlock x:Name="DebugButtonColor" Text="Active: {color}, Regular: {color}" Grid.Row="1" Grid.Column="1" VerticalAlignment="Bottom"/>
                     <TextBlock x:Name="DebugPixelColor" Text="Pixel Color at (x,y): res" Grid.Row="1" Grid.Column="2" VerticalAlignment="Bottom" Margin="0,0,0,15"/>
                     <TextBlock Text="Latest Captured Frame:" Grid.Row="1" Grid.Column="2" VerticalAlignment="Bottom"/>
