--- a/src/CSAuto/GUIWindow.xaml
+++ b/src/CSAuto/GUIWindow.xaml
@@ -43,6 +43,7 @@
                             <StackPanel Orientation="Vertical">
                                 <CheckBox x:Name="StartUpCheck" Content="menu_startup" Height="Auto" IsChecked="{Binding Source={x:Static properties:Settings.Default},Path=runAtStartUp}" Click="StartUpCheck_Click"/>
                                 <CheckBox x:Name="DarkThemeCheck" Content="menu_darktheme" Height="Auto" IsChecked="{Binding Source={x:Static properties:Settings.Default},Path=darkTheme}" Click="DarkThemeCheck_Click"/>
+                                <CheckBox Content="menu_autoclosecsauto" Height="Auto" IsChecked="{Binding Source={x:Static properties:Settings.Default},Path=autoCloseCSAuto}"/>
                                 <StackPanel Orientation="Horizontal">
                                     <TextBlock Text="title_color" FontSize="15" TextAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                                     <ComboBox x:Name="ColorsComboBox" ItemsSource="{Binding Source={x:Static properties:Settings.Default},Path=availableColors}" SelectedItem="{Binding Source={x:Static properties:Settings.Default},Path=currentColor, Mode=OneTime, UpdateSourceTrigger=PropertyChanged}" SelectionChanged="ColorsComboBox_SelectionChanged"/>
