Rounded corners: * added rounded corners to gui window * tried to add rounded corners to context menu, but it is broken atm, maybe later

--- a/src/CSAuto/GUIWindow.xaml
+++ b/src/CSAuto/GUIWindow.xaml
@@ -16,7 +16,8 @@
         Loaded="GUIWindow_Loaded"
         WindowState="Normal"
         WindowTitleBrush="Black"
-        GlowBrush="Black"
+        GlowBrush="Transparent"
+        NonActiveGlowBrush="Transparent"
         TitleCharacterCasing="Normal">
     <mahapps:MetroWindow.LeftWindowCommands>
         <mahapps:WindowCommands>
