--- a/src/CSAuto/GUIWindow.xaml
+++ b/src/CSAuto/GUIWindow.xaml
@@ -258,6 +258,9 @@
                     <TextBlock Text="discord_restartneeded"/>
                 </StackPanel>
             </mahapps:MetroTabItem>
+            <!--<mahapps:MetroTabItem Header="menu_autobuy">
+                <Image x:Name="AutoBuyImage" MouseDown="AutoBuyImage_MouseDown"/>
+            </mahapps:MetroTabItem>-->
         </TabControl>
         <TextBlock x:Name="VersionText" Text="ver smthn" VerticalAlignment="Bottom" HorizontalAlignment="Left" Foreground="Gray"/>
     </Grid>
